[package]
name = "ocpp_bevy_poc"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.16.1"
chrono = { version = "0.4.41", features = ["serde"]}
crossbeam-channel = "0.5.15"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = "1.45.1"
tokio-modbus = "0.16.1"
tracing = "0.1.41"
